--- a/.github/workflows/test-minio.yaml
+++ b/.github/workflows/test-minio.yaml
@@ -6,9 +6,9 @@ on:
   workflow_dispatch:
 
 env:
+  AWS_ACCESS_KEY_ID: minioadmin
+  AWS_SECRET_ACCESS_KEY: minioadmin
   AWS_S3_BUCKET: testbucket
-  AWS_S3_ACCESS_KEY: minioadmin
-  AWS_S3_SECRET_KEY: minioadmin
   AWS_S3_ENDPOINT: http://127.0.0.1:9000
 jobs:
   test-with-minio:
@@ -17,8 +17,8 @@ jobs:
       minio:
         image: minio/minio:latest
         env:
-          MINIO_ACCESS_KEY: ${{ env.AWS_S3_ACCESS_KEY }}
-          MINIO_SECRET_KEY: ${{ env.AWS_S3_SECRET_KEY }}
+          MINIO_ACCESS_KEY: ${{ env.AWS_ACCESS_KEY_ID }}
+          MINIO_SECRET_KEY: ${{ env.AWS_SECRET_ACCESS_KEY }}
         volumes:
           - /tmp/data:/data
           - /tmp/config:/root/.minio
